Fix page overflow

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -1,11 +1,12 @@
 /* ==========================================================================
    Global: Inpage
    ========================================================================== */
-
-.inpage {
+  
+ .inpage {
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow-x: hidden; // Prevents map from overflowing horizontally.
 
   .inpage__header {
     @extend .antialiased;
